--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: url("/static/background.png") no-repeat center;
+  background-size: cover;
+
+  color: #1a4863;
 }
 
 a {
@@ -13,4 +17,38 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+p {
+  font-weight: 500;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+pre {
+  margin: 0;
+}
+
+button {
+  background-color: transparent;
+  background-image: none;
+  font-weight: 600;
+}
+
+button:focus {
+  outline: 1px dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+:root {
+  --text-white: white;
+  --text-purple: #62008f;
+  --text-white-100: #cccccc;
+  --text-black: #000;
 }
